--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ font-family:impact;
 
 <header>
 
-<img id="logo" src="WebsiteLogo.png">
+<img id="logo" src="Website Logo.jpg">
 
 <h1 id="Title"><em><strong>SOAR: Flight Intelligence</strong></em></h1>
 
