--- a/SoarAboutFINAL.html
+++ b/SoarAboutFINAL.html
@@ -162,7 +162,7 @@ li a:hover {
 
 <img id="picture1" src="Coding Picture.jpg">
 
-<a href="SoarHomeFINAL.html"><img id="picture2" src="Website Logo.png"></a>
+<a href="SoarHomeFINAL.html"><img id="picture2" src="Website Logo.jpg"></a>
 
 </body>
 </html>
