--- a/SoarAboutFINAL.html
+++ b/SoarAboutFINAL.html
@@ -130,7 +130,7 @@ li a:hover {
 
 <header>
 
-<img id="logo" src="Website Logo.png">
+<img id="logo" src="Website Logo.jpg">
 
 <h1 id="Title"><em><strong>SOAR: Flight Intelligence</strong></em></h1>
 
@@ -139,7 +139,7 @@ li a:hover {
 <nav>
 
 <ul class="nav1">
-<li class="nav1"><a href="SoarHomeFINAL.html">Home</a></li>
+<li class="nav1"><a href="index.html">Home</a></li>
 <li class="nav1"><a id="active" href="SoarAboutFINAL.html">About</a></li>
 <li class="nav1"><a href="SoarBoeing.html">Boeing</a></li>
 <li class="nav1"><a href="#airbus">Airbus</a></li>
