--- a/SoarBoeing.html
+++ b/SoarBoeing.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <title>Soar: Boeing</title>
 <head>
@@ -220,7 +220,7 @@ img {vertical-align: middle;}
 
 <header>
 
-<img id="logo"src="Website Logo.jpg">
+<img id="logo" src="Website Logo.jpg">
 
 <h1 id="Title"><em>SOAR: Flight Intelligence</em></h1>
 
@@ -229,7 +229,7 @@ img {vertical-align: middle;}
 <nav>
 
 <ul class="nav1">
-<li class="nav1"><a href="SoarHomeFINAL.html">Home</a></li>
+<li class="nav1"><a href="index.html">Home</a></li>
 <li class="nav1"><a href="SoarAboutFINAL.html">About</a></li>
 <li class="nav1"><a id="active" href="SoarBoeing.html">Boeing</a></li>
 <li class="nav1"><a href="#airbus">Airbus</a></li>
