--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ font-family:impact;
 <nav>
 
 <ul class="nav1">
-<li class="nav1"><a id="active" href="SoarHomeFINAL.html">Home</a></li>
+<li class="nav1"><a id="active" href="index.html">Home</a></li>
 <li class="nav1"><a href="SoarAboutFINAL.html">About</a></li>
 <li class="nav1"><a href="SoarBoeing.html">Boeing</a></li>
 <li class="nav1"><a href="#airbus">Airbus</a></li>
